[package]
name = "block-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
redis = { version = "0.24.0", features = ["tokio-comp"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
sha2 = "0.10"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
bincode = "1.3"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"

[[bin]]
name = "auction_demo"
path = "src/auction_demo.rs"

[[bench]]
name = "bundle_processing"
harness = false
